# wordle-bot

./: .gitignore  newmain.py  pyproject.toml
src/: analysis.py  app.py  benchmark.py  bot.py  main.py
web-scraping-examples/: index.html  main.py  solver.py
