[tool.poetry]
name = "wordle web scraper"
version = "0.1.0"
description = ""
authors = ["humphrja <103923110+humphrja@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.14"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
playwright = "^1.53.0"
colorama = "^0.4.6"
pandas = "^2.3.0"
argparse = "^1.4.0"
pyinstaller = "^6.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
